--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,39 @@
-.App {
-  text-align: center;
+.react-app{
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+  color: white;
+}
+
+.react-app-header,
+.react-app-footer{
+  background-color: black;
+  text-align: center;  
+  width: 100%;
+}
+
+.react-app-header{
+  position: sticky;
+  top: 0;
+}
+
+.react-app-footer{
+  position: fixed;
+  bottom: 0;
+}
+
+.react-app-header-text{
+  font-size: 30px;
+}
+
+.react-app-footer-text{
+  font-size: 24px;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 6vmin;
   pointer-events: none;
 }
 
@@ -11,21 +41,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -36,3 +51,41 @@
     transform: rotate(360deg);
   }
 }
+
+.react-app-components{
+  padding: 20px 20px 200px 20px;
+}
+
+
+.react-app-classComponents-header,
+.react-app-functionalComponents-header{
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.react-app-classComponents-subheader,
+.react-app-functionalComponents-subheader{
+  font-size: 20px;
+}
+
+
+/* .App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App {
+  text-align: center;
+}
+
+.App-link {
+  color: #61dafb;
+} */
+
+
