Code Snippet Integration

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
 .react-app-header{
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 .react-app-footer{
@@ -143,5 +144,39 @@ color: white;
 .App-link {
   color: #61dafb;
 } */
+
+
+.flex-body{
+  display: flex;
+  /* padding-right: 100px; */
+}
+
+.flex-left-content{
+  flex: 40%;
+}
+
+.flex-right-content{
+  flex: 40%;
+  position: relative;
+}
+
+@media(max-width:768px){
+  .flex-body{
+      flex-wrap: wrap;
+      padding-right: 0px;
+  }
+  .flex-left-content,
+  .flex-right-content{
+      flex:100%;
+  }
+}
+
+.copy-icon{
+  position: absolute;
+  top: 18px;
+  right: 0px;
+  border: 1px solid white;
+  background-color: white;
+}
 
 
